--- a/.gitignore
+++ b/.gitignore
@@ -212,4 +212,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#postgres data
+postgres_data
+
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
