--- a/.gitignore
+++ b/.gitignore
@@ -214,5 +214,6 @@ $RECYCLE.BIN/
 
 #postgres data
 postgres_data
+mysql_data
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
