--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,23 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=${PG_PASSWORD}
     ports:
       - ${PG_PORT}:${PG_REFPORT}
+
+  mysql:
+    image: mysql:5
+    environment:
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_PORT=3306
+    ports:
+      - 3307:3306
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - PMA_HOST=mysql_data
+    ports:
+      - 8089:80
