--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
@@ -25,6 +26,7 @@
     "express": "^4.17.2",
     "faker": "^5.5.3",
     "joi": "^17.6.0",
+    "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.17.0"
