--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.17.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize": "^6.17.0"
   },
   "engines": {
     "node": "16.13.1"
